# qosst

./: .gitignore  .pylintrc  .readthedocs.yml  CITATION.cff  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: conf.py  index.md  refs.bib
docs/source/_static/: coherent_state.drawio  coherent_state_transmission.drawio
docs/source/community/: contributing.md  license.md
docs/source/complementary/: acknowledgements.md  acronyms.md
docs/source/introduction/: goals_and_design.md  structure.md
docs/source/introduction_qkd/: cvqkd.md  qkd.md
docs/source/technical/: getting_started.md  tutorial.md
qosst/: __init__.py  code_quality.py
